:art: [update] way to load user session to avoid layout shift

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -37,6 +37,10 @@ body.scroll-disabled {
 	overflow: hidden;
 }
 
+body:not(.visible) {
+	visibility: hidden;
+}
+
 /* --- SCROLLBAR --- */
 
 ::-webkit-scrollbar {
